main/default/objects/Outreach_Notification_History__c/Outreach_Notification_History__c.object-meta.xml
<CustomObject>
    <description>Contains historical data of notifications sent out to contacts.</description>
    <label>Outreach Notification History</label>
    <nameField>
        <displayFormat>ONH{000000}</displayFormat>
        <label>Outreach Notification History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Notification Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>