main/default/objects/Outreach_Notification_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links to the contact (participant)</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outreach Notification Histories</relationshipLabel>
    <relationshipName>Outreach_Notification_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>