main/default/objects/Outreach_Notification_History__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>Notification Type</description>
    <formula>Text(Outreach_Notification_Setting__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Type</label>
    <type>Text</type>
</CustomField>