main/default/objects/Outreach_Notification_History__c/fields/Outreach_Notification__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Parent Outreach Notification</description>
    <label>Outreach Notification</label>
    <referenceTo>Outreach_Notification__c</referenceTo>
    <relationshipLabel>Outreach Notification Histories</relationshipLabel>
    <relationshipName>Outreach_Notification_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>