main/default/objects/Outreach_Notification_History__c/fields/Outreach_Notification_Setting__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notification_Setting__c</fullName>
    <description>Lookup field to the Outreach Notification Setting</description>
    <label>Outreach Notification Setting</label>
    <referenceTo>Outreach_Notification_Setting__c</referenceTo>
    <relationshipLabel>Outreach Notification Histories</relationshipLabel>
    <relationshipName>Outreach_Notification_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>