main/default/objects/Outreach_Notification_History__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the record has been processed by the Batch job</description>
    <label>Processed?</label>
    <type>Checkbox</type>
</CustomField>