main/default/objects/Outreach_Notification_History__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <description>This is what the notification was sent for</description>
    <label>Related To</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>