main/default/objects/Outreach_Notification_History__c/fields/Related_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Id__c</fullName>
    <description>Hidden field (contains the record id)</description>
    <label>Related To (Id)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>