main/default/objects/Outreach_Notification_History__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>Schedule of the notification to be sent out</description>
    <label>Schedule</label>
    <type>DateTime</type>
</CustomField>