main/default/objects/Outreach_Notification_History__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Timezone</description>
    <label>Timezone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>