main/default/objects/Outreach_Notification_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Related_To__c</columns>
    <columns>Outreach_Notification_Setting__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Schedule__c</columns>
    <columns>Timezone__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>