main/default/objects/Outreach_Notification_History__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Related_To__c</columns>
    <columns>Outreach_Notification_Setting__c</columns>
    <columns>Notification_Type__c</columns>
    <columns>Schedule__c</columns>
    <columns>Timezone__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>